deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app-projetoada-myk
  name: projetoada-myk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: projeto
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-projetoada-myk
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: projeto-sa
      containers:
      - image: schwendler/embarque-ti-spd-project
        name: projetoada-myk
        ports:
        - containerPort: 8080
        resources: {}
status: {}
