service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-projetoada-myk
  name: projetoada-myk
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-projetoada-myk
status:
  loadBalancer: {}
