ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: projetoada-myk-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: myk.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: projeto
            port:
              number: 8080
        pathType: Prefix
status:
  loadBalancer: {}
